--- a/client/src/components/MissionConsole/MissionConsole.module.scss
+++ b/client/src/components/MissionConsole/MissionConsole.module.scss
@@ -5,7 +5,7 @@
   flex: 1 1;
   top: 6vh;
   left: 3vw;
-  right: 51.6vw;
+  right: 51.2vw;
   overflow: hidden;
   background: #ffffffa6;
   border: 1px solid black !important;
@@ -17,6 +17,7 @@
   border-radius: 1vh;
   box-shadow: 5px 5px 15px 5px #000000;
   z-index: 1;
+  right: 51.2vw;
 
   .header {
     display: flex;
