--- a/client/src/components/WorldViewer/WorldViewer.module.scss
+++ b/client/src/components/WorldViewer/WorldViewer.module.scss
@@ -43,10 +43,10 @@
   position: fixed;
   display: flex;
   justify-self: center;
-  width: 9vh;
-  left: 47vw;
   z-index: 1;
-  // border: 4px solid red !important;
+  left: 47vw;
+  width: 6.2vw;
+  height: 148vh;
 }
 
 .stoneRectangle01 {
